--- a/JAVA_05/ex00/Chat/pom.xml
+++ b/JAVA_05/ex00/Chat/pom.xml
@@ -7,7 +7,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<artifactId>chat</artifactId>
 	<version>1</version>
 	<properties>
-		<maven.compile.source>1.8</maven.compiler.source>
-		<maven.compile.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 </project>  
