--- a/JAVA_05/ex00/Chat/pom.xml
+++ b/JAVA_05/ex00/Chat/pom.xml
@@ -10,4 +10,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+	</build>
 </project>  
