--- a/JAVA_05/ex01/Chat/pom.xml
+++ b/JAVA_05/ex01/Chat/pom.xml
@@ -48,6 +48,26 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.4</version>
+				<executions>
+					<execution>
+			  			<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+		  				</goals>
+						<configuration>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>com.tericcabrel.App</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
