--- a/JAVA_05/ex01/Chat/pom.xml
+++ b/JAVA_05/ex01/Chat/pom.xml
@@ -61,7 +61,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.tericcabrel.App</mainClass>
+									<mainClass>edu.Roma42.chat.app.Program</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
