RUSH_00 logic behind map creation with random obstacles position and with a valid path done

--- a/RUSH_00/Game/src/main/resources/application-dev.properties
+++ b/RUSH_00/Game/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 enemy.char = X
 player.char = d
-wall.char =
+wall.char = w
 goal.char = D
-empty.char =
+empty.char = e
 enemy.color = RED
 player.color = BLUE
 wall.color = GREEN
