--- a/RUSH_00/Game/pom.xml
+++ b/RUSH_00/Game/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>edu.Roma42.game</groupId>
   <artifactId>Game</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>Game</name>
 
@@ -59,7 +59,6 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -128,6 +127,5 @@
             </executions>
           </plugin>
       	</plugins>
-    </pluginManagement>
   </build>
 </project>
