--- a/JAVA_07/ex01/Annotations/pom.xml
+++ b/JAVA_07/ex01/Annotations/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<auto-service.version>1.0-rc5</auto-service.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -28,6 +29,7 @@
       <artifactId>auto-service</artifactId>
       <version>1.0-rc5</version>
       <optional>true</optional>
+	  <scope>provided</scope>
 	</dependency>
   </dependencies>
 
@@ -48,6 +50,10 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
 		  <configuration>
+			<!-- compilerArgs>
+				<arg>-XprintProcessorInfo</arg>
+				<arg>-XprintRounds</arg>
+			</compilerArgs -->
 			<source>1.8</source>
 			<target>1.8</target>
 		  </configuration>
