--- a/JAVA_07/ex01/prova/Annotations/pom.xml
+++ b/JAVA_07/ex01/prova/Annotations/pom.xml
@@ -4,11 +4,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.Roma42.app</groupId>
+  <groupId>edu.Roma42.annotations</groupId>
   <artifactId>Annotations</artifactId>
   <version>1.0</version>
 
   <url>http://www.example.com</url>
+
+  <parent>
+    <groupId>edu.Roma42.prova</groupId>
+    <artifactId>prova</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
