--- a/JAVA_07/ex01/prova/UserForm/pom.xml
+++ b/JAVA_07/ex01/prova/UserForm/pom.xml
@@ -4,15 +4,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.Roma42.app</groupId>
-  <artifactId>Annotations</artifactId>
-  <version>1.0</version>
+  <groupId>edu.Roma42.Forms</groupId>
+  <artifactId>UserForm</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-  <url>http://www.example.com</url>
+  <name>UserForm</name>
+
+  <parent>
+    <groupId>edu.Roma42.prova</groupId>
+    <artifactId>prova</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<auto-service.version>1.0-rc5</auto-service.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -25,11 +30,10 @@
       <scope>test</scope>
     </dependency>
 	<dependency>
-      <groupId>com.google.auto.service</groupId>
-      <artifactId>auto-service</artifactId>
-      <version>1.0-rc5</version>
-      <optional>true</optional>
-	  <scope>provided</scope>
+		<groupId>edu.Roma42.annotations</groupId>
+		<artifactId>Annotations</artifactId>
+		<version>1.0</version>
+		<scope>compile</scope>
 	</dependency>
   </dependencies>
 
@@ -48,14 +52,13 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+		  <version>3.8.0</version>
 		  <configuration>
-			<!-- compilerArgs>
-				<arg>-XprintProcessorInfo</arg>
-				<arg>-XprintRounds</arg>
-			</compilerArgs -->
-			<source>1.8</source>
-			<target>1.8</target>
+			 <annotationProcessors>
+			 	<processor>edu.Roma42.processors</processor>
+			 </annotationProcessors>
+		 	 <source>1.8</source>
+		 	 <target>1.8</target>
 		  </configuration>
         </plugin>
         <plugin>
