--- a/JAVA_07/ex01/prova/pom.xml
+++ b/JAVA_07/ex01/prova/pom.xml
@@ -4,17 +4,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.Roma42.app</groupId>
-  <artifactId>Annotations</artifactId>
-  <version>1.0</version>
+  <groupId>edu.Roma42.prova</groupId>
+  <artifactId>prova</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <url>http://www.example.com</url>
+  <name>prova</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<auto-service.version>1.0-rc5</auto-service.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -24,14 +24,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-	<dependency>
-      <groupId>com.google.auto.service</groupId>
-      <artifactId>auto-service</artifactId>
-      <version>1.0-rc5</version>
-      <optional>true</optional>
-	  <scope>provided</scope>
-	</dependency>
   </dependencies>
+  <modules>
+	  <module>Annotations</module>
+	  <module>UserForm</module>
+  </modules>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -49,14 +46,6 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
-		  <configuration>
-			<!-- compilerArgs>
-				<arg>-XprintProcessorInfo</arg>
-				<arg>-XprintRounds</arg>
-			</compilerArgs -->
-			<source>1.8</source>
-			<target>1.8</target>
-		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
