--- a/JAVA_07/ex01/Annotations/processor/pom.xml
+++ b/JAVA_07/ex01/Annotations/processor/pom.xml
@@ -1,13 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>Annotations</artifactId>
+    <groupId>edu.Roma42</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-  <groupId>edu.Roma42</groupId>
-  <artifactId>Annotations</artifactId>
+  <groupId>edu.Roma42.processor</groupId>
+  <artifactId>processor</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Annotations</name>
-  <packaging>pom</packaging>
+  <name>processor</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,11 +26,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>com.google.auto.service</groupId>
+	  <artifactId>auto-service</artifactId>
+	  <version>1.1.1</version>
+	</dependency>
+	<dependency>
+	  <groupId>edu.Roma42.annotations</groupId>
+	  <artifactId>annotations</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 
   <build>
-    <pluginManagement>
-      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -41,6 +54,10 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+		  <configuration>
+			  <source>1.8</source>
+			  <target>1.8</target>
+		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -70,8 +87,4 @@
       </plugins>
     </pluginManagement>
   </build>
-<modules>  <module>annotations</module>
-    <module>processor</module>
-    <module>form</module>
-  </modules>
 </project>
