--- a/JAVA_08/ex00/Spring/pom.xml
+++ b/JAVA_08/ex00/Spring/pom.xml
@@ -23,6 +23,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-context</artifactId>
+	  <version>6.0.11</version>
+	</dependency>
   </dependencies>
 
   <build>
